; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vm/extr_vm_compressor_backing_file.c_vm_record_file_write.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vm/extr_vm_compressor_backing_file.c_vm_record_file_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UIO_WRITE = common dso_local global i32 0, align 4
@UIO_SYSSPACE = common dso_local global i32 0, align 4
@IO_NODELOCKED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vm_record_file_write(i32 %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  store i32 0, i32* %9, align 4
  %11 = call i32 (...) @vfs_context_kernel()
  store i32 %11, i32* %10, align 4
  %12 = load i32, i32* @UIO_WRITE, align 4
  %13 = load i32, i32* %5, align 4
  %14 = load i8*, i8** %7, align 8
  %15 = ptrtoint i8* %14 to i32
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* @UIO_SYSSPACE, align 4
  %19 = load i32, i32* @IO_NODELOCKED, align 4
  %20 = load i32, i32* %10, align 4
  %21 = call i32 @vfs_context_ucred(i32 %20)
  %22 = load i32, i32* %10, align 4
  %23 = call i32 @vfs_context_proc(i32 %22)
  %24 = call i32 @vn_rdwr(i32 %12, i32 %13, i32 %15, i32 %16, i32 %17, i32 %18, i32 %19, i32 %21, i32* null, i32 %23)
  store i32 %24, i32* %9, align 4
  %25 = load i32, i32* %9, align 4
  ret i32 %25
}

declare dso_local i32 @vfs_context_kernel(...) #1

declare dso_local i32 @vn_rdwr(i32, i32, i32, i32, i32, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @vfs_context_ucred(i32) #1

declare dso_local i32 @vfs_context_proc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
